# vue-chatbot-template

./: .gitignore  README.md  package.json  pyproject.toml
backend/: .gitignore  docker-compose.yml  dockerfile
backend/alembic/: env.py
backend/alembic/versions/: c4f108cd7f0d_add_cascade_delete_to_chat_messages_.py
backend/data/: SqualLists-English.json
backend/src/: app.py  config.py  database.py  dependencies.py  models.py
backend/src/clients/: inference_client.py  inference_gw.py
backend/src/repository/: chat_session_repository.py  user_repository.py
backend/src/routes/: auth.py  chat_message.py  chat_route.py  chat_session.py  message_route.py  user_route.py
backend/src/schemas/: openaiLike_schema.py  user_schema.py
backend/src/services/: chat_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: Message.vue  ProfileMenu.vue  SideBarMenu.vue
frontend/src/router/: index.js  router.js
frontend/src/services/: api.js  chat.js  chat_messages.js  chat_session.js  (+1 more)
scripts/: chat_simulator.js
src/: app.py  config.py  database.py  models.py  schema.py
src/clients/: inference_client.py  inference_gw.py
src/exceptions/: exceptions.py
src/repository/: chat_session_repository.py
src/routes/: auth.py  chat_message.py  chat_session.py
src/schemas/: auth_schema.py  chat_message_schema.py  chat_session.py  chat_session_schema.py  openaiLike_schema.py
src/services/: chat_session_service.py  user_service.py
(+14 files in other folders)
