[project]
name = "chatbot"
version = "0.1"
description = ""
authors = [
    {name = "carlos-dani-dev",email = "carlos.rocha@ufpi.edu.br"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "selenium (>=4.44.0,<5.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "docker compose up --build"
clean = "docker compose down -v"
test = "pytest"